# kiwi

./: .claude  CLAUDE.md  Cargo.toml
docs/: PR255_REVIEW_FIXES.md  snapshot-logindex-sync-plan-v3.md  snapshot-logindex-sync-plan.md
docs/superpowers/plans/: 2026-04-16-multi-instance-logindex-snapshot.md
docs/superpowers/specs/: 2026-04-16-snapshot-logindex-sync-review.md
src/common/runtime/: error.rs
src/logindex/: Cargo.toml
src/logindex/src/: cf_tracker.rs  collector.rs  db_access.rs  event_listener.rs  lib.rs  table_properties.rs  types.rs
src/logindex/tests/: logindex_integration.rs
src/raft/src/: db_access.rs  lib.rs  node.rs  snapshot_archive.rs  state_machine.rs
src/raft/tests/: logindex_integration.rs  snapshot_logindex_test.rs  snapshot_roundtrip_test.rs
src/storage/src/: checkpoint.rs  lib.rs  redis.rs  storage.rs
src/storage/src/logindex/: cf_tracker.rs  collector.rs  db_access.rs  event_listener.rs  mod.rs  table_properties.rs  types.rs
src/storage/tests/: checkpoint_test.rs  storage_basic_test.rs
