[package]
name = "logindex"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
rocksdb.workspace = true
storage = { path = "../storage" }
parking_lot.workspace = true
tempfile.workspace = true
log.workspace = true

[dev-dependencies]
rocksdb.workspace = true
tempfile.workspace = true

[[test]]
name = "logindex_integration"
path = "tests/logindex_integration.rs"
